# TokIntel

./: .coverage  .coverage.Matteos-MacBook-Pro.local.43812.XGyxviAx  .coverage.Matteos-MacBook-Pro.local.43812.XsGVtJAx  .coveragerc  .cursor.txt  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  ANTI_RICADUTA_CHEATSHEET.md  CHANGELOG.md  CHANGELOG_QUICKSTART.md  CHECKLIST.md  CHECKLIST_POST_DEPLOY.md  CI_STRICT_STEP_YAML.md  COMMIT_MESSAGE_SPRINT3.md  COMMIT_MESSAGE_SPRINT3_HARDENING.md  CURSOR_DEPLOY_BLOCK.txt  CURSOR_FINAL_PACKAGE.md  CURSOR_PROMPT_STATUS_BADGES.md  CURSOR_SOFT_VARIANT.md  DASHBOARD_FIX_SUMMARY.md  DASHBOARD_INSTRUCTIONS.md  DASHBOARD_SUMMARY.md  DEMO_SUMMARY.md  DEPLOYMENT_FINAL.md  DOCS_ENTERPRISE_ADDONS_SUMMARY.md  DOCS_HARDENING_UPGRADE_SUMMARY.md  DOCS_STRICT_IMPLEMENTATION_SUMMARY.md  DOCS_SYSTEM_FINAL_COMPLETE.md  DOCS_SYSTEM_FINAL_SUMMARY.md  DOCS_SYSTEM_UNIFIED_SUMMARY.md  DX_HANDOFF_FINAL.md  DX_IMPLEMENTATION_FINAL.md  DX_PRO_LEVEL_COMPLETE.md  DX_QUICKSTART.md  DX_SETUP_COMPLETE.md  DX_SYSTEM_COMPLETE.md  (+92 more)
.github/: CODEOWNERS  branch-protection.yml  pull_request_template.md
analyzer/: __init__.py  build_visual_index.py  frame_sampler.py  index_faiss.py  ocr_extractor.py  orchestrator.py  run_multimodal.py  search_multimodal.py  transcribe_whisper.py  vision_clip.py
collector/: __init__.py  collect_tiktok_collection.py
config/: settings.yaml
dash/: README.md  __init__.py  app.py  perf_dashboard.py
docs/: DOCS_STRICT_SYSTEM.md  DOCS_SYSTEM_README.md  ENTERPRISE_SETUP.md  ROLLBACK.md  (+5 more)
(+134 files in other folders)
