[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokintel"
version = "0.1.0"
description = "Analisi Multimodale di Video"
authors = [{name = "Matteo Papetti", email = "matteo.papetti@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "sqlite3",
    "yaml",
    "pathlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "coverage>=7.6.0",
]

[tool.pytest.ini_options]
addopts = "-q -ra --maxfail=1"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning"
]
